--- a/MetransService/App.config
+++ b/MetransService/App.config
@@ -1,159 +1,150 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net"/>
-    
-  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-  <section name="oracle.manageddataaccess.client" type="OracleInternal.Common.ODPMSectionHandler, Oracle.ManagedDataAccess, Version=4.122.19.1, Culture=neutral, PublicKeyToken=89b483f429c47342"/>
-  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-  <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
   </startup>
   <!-- *********** ЛОГИРОВАНИЕ В ФАЙЛ ************************************** -->
   <log4net>
     <appender name="LogFileAppender" type="log4net.Appender.RollingFileAppender">
-      <param name="File" value="Logs\Informations.log"/>
-      <param name="AppendToFile" value="true"/>
-      <maxSizeRollBackups value="10"/>
-      <maximumFileSize value="5MB"/>
-      <lockingModel type="log4net.Appender.FileAppender+MinimalLock"/>
+      <param name="File" value="Logs\Informations.log" />
+      <param name="AppendToFile" value="true" />
+      <maxSizeRollBackups value="10" />
+      <maximumFileSize value="5MB" />
+      <lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
       <layout type="log4net.Layout.PatternLayout">
-        <param name="ConversionPattern" value="%d  %-5p %m%n"/>
+        <param name="ConversionPattern" value="%d  %-5p %m%n" />
       </layout>
       <filter type="log4net.Filter.LevelRangeFilter">
-        <levelMin value="INFO"/>
-        <levelMax value="WARN"/>
+        <levelMin value="INFO" />
+        <levelMax value="WARN" />
       </filter>
     </appender>
     <appender name="ErrorFile" type="log4net.Appender.RollingFileAppender">
-      <file value="Logs\Errors.log"/>
-      <appendToFile value="true"/>
-      <maximumFileSize value="5MB"/>
-      <maxSizeRollBackups value="10"/>
+      <file value="Logs\Errors.log" />
+      <appendToFile value="true" />
+      <maximumFileSize value="5MB" />
+      <maxSizeRollBackups value="10" />
       <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="%d %level %thread %logger - %message%newline"/>
+        <conversionPattern value="%d %level %thread %logger - %message%newline" />
       </layout>
       <filter type="log4net.Filter.LevelRangeFilter">
-        <levelMin value="ERROR"/>
-        <levelMax value="FATAL"/>
+        <levelMin value="ERROR" />
+        <levelMax value="FATAL" />
       </filter>
     </appender>
     <appender name="DebugFile" type="log4net.Appender.RollingFileAppender">
-      <file value="Logs\Debug.log"/>
-      <appendToFile value="true"/>
-      <maximumFileSize value="5MB"/>
-      <maxSizeRollBackups value="10"/>
+      <file value="Logs\Debug.log" />
+      <appendToFile value="true" />
+      <maximumFileSize value="5MB" />
+      <maxSizeRollBackups value="10" />
       <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="%d %level %thread %logger - %message%newline"/>
+        <conversionPattern value="%d %level %thread %logger - %message%newline" />
       </layout>
       <filter type="log4net.Filter.LevelRangeFilter">
-        <levelMin value="DEBUG"/>
-        <levelMax value="DEBUG"/>
+        <levelMin value="DEBUG" />
+        <levelMax value="DEBUG" />
       </filter>
     </appender>
     <logger name="LOGGER">
-      <appender-ref ref="LogFileAppender"/>
-      <appender-ref ref="ErrorFile"/>
-      <appender-ref ref="DebugFile"/>
+      <appender-ref ref="LogFileAppender" />
+      <appender-ref ref="ErrorFile" />
+      <appender-ref ref="DebugFile" />
     </logger>
   </log4net>
   <appSettings>
     <!-- *********** БИБЛИОТЕКА ЛОГИРОВАНИЯ **************************** -->
     <!-- Настройки логирования -->
-    <add key="ESourceName" value="METRANS"/>
-    <add key="ELogName" value="IDS_METRANS"/>
+    <add key="ESourceName" value="METRANS" />
+    <add key="ELogName" value="IDS_METRANS" />
     <!-- В журнал Windows -->
-    <add key="ELog" value="True"/>
-    <add key="ELogException" value="True"/>
-    <add key="ELogEvent" value="True"/>
-    <add key="ELogServices" value="True"/>
+    <add key="ELog" value="True" />
+    <add key="ELogException" value="True" />
+    <add key="ELogEvent" value="True" />
+    <add key="ELogServices" value="True" />
     <!-- В базу данных -->
-    <add key="DBLog" value="False"/>
-    <add key="DBLogException" value="True"/>
-    <add key="DBLogEvent" value="True"/>
-    <add key="DBLogServices" value="True"/>
+    <add key="DBLog" value="False" />
+    <add key="DBLogException" value="True" />
+    <add key="DBLogEvent" value="True" />
+    <add key="DBLogServices" value="True" />
     <!-- В файл на диске -->
-    <add key="FLog" value="True"/>
-    <add key="FLogException" value="True"/>
-    <add key="FLogEvent" value="True"/>
-    <add key="FLogServices" value="True"/>
+    <add key="FLog" value="True" />
+    <add key="FLogException" value="True" />
+    <add key="FLogEvent" value="True" />
+    <add key="FLogServices" value="True" />
     <!-- *********** СЕРВИСЫ  ***************************************** -->
     <!-- сервис перенос файлов из SFTP Метранс на АМКР -->
-    <add key="ActiveTransferFile" value="True"/>
-    <add key="IntervalTransferFile" value="300"/>
+    <add key="ActiveTransferFile" value="True" />
+    <add key="IntervalTransferFile" value="300" />
     <!-- Подключение к SFTP Метранс -->
-    <add key="Host_res" value="159.224.194.27"/>
-    <add key="Host" value="85.198.128.130"/>    
-    <add key="Port" value="222"/>
-    <add key="User" value="arcelors"/>
-    <add key="PSW" value="$fh#ER2J63"/>
+    <add key="Host_res" value="159.224.194.27" />
+    <add key="Host" value="85.198.128.130" />
+    <add key="Port" value="222" />
+    <add key="User" value="arcelors" />
+    <add key="PSW" value="$fh#ER2J63" />
     <!-- сервис перенос файлов на подходах -->
-    <add key="fromPathHostTransferApproaches" value="/inbox"/>
-    <add key="FileFiltrHostTransferApproaches" value="*.txt"/>
-    <add key="toDirPathTransferApproaches" value="C:\txt"/>
-    <add key="toTMPDirPathTransferApproaches" value="C:\RailWay\temp_txt"/>
-    <add key="DeleteFileHostTransferApproaches" value="True"/>
-    <add key="RewriteFileTransferApproaches" value="False"/>
+    <add key="fromPathHostTransferApproaches" value="/inbox" />
+    <add key="FileFiltrHostTransferApproaches" value="*.txt" />
+    <add key="toDirPathTransferApproaches" value="C:\txt" />
+    <add key="toTMPDirPathTransferApproaches" value="C:\RailWay\temp_txt" />
+    <add key="DeleteFileHostTransferApproaches" value="True" />
+    <add key="RewriteFileTransferApproaches" value="False" />
     <!-- сервис перенос файлов на станции Кривой Рог -->
-    <add key="fromPathHostTransferArrival" value="/xmlin"/>
-    <add key="FileFiltrHostTransferArrival" value="*.xml"/>
-    <add key="toDirPathTransferArrival" value="C:\xml"/>
-    <add key="toTMPDirPathTransferArrival" value="C:\RailWay\temp_xml"/>
-    <add key="DeleteFileHostTransferArrival" value="True"/>
-    <add key="RewriteFileTransferArrival" value="False"/>
+    <add key="fromPathHostTransferArrival" value="/xmlin" />
+    <add key="FileFiltrHostTransferArrival" value="*.xml" />
+    <add key="toDirPathTransferArrival" value="C:\xml" />
+    <add key="toTMPDirPathTransferArrival" value="C:\RailWay\temp_xml" />
+    <add key="DeleteFileHostTransferArrival" value="True" />
+    <add key="RewriteFileTransferArrival" value="False" />
     <!-- сервис TransferApproaches перенос из файлов txt в базу данных METRANS -->
-    <add key="ActiveTransferApproaches" value="True"/>
-    <add key="IntervalTransferApproaches" value="300"/>
-    <add key="DeleteFileTransferApproaches" value="True"/>
+    <add key="ActiveTransferApproaches" value="True" />
+    <add key="IntervalTransferApproaches" value="300" />
+    <add key="DeleteFileTransferApproaches" value="True" />
     <!-- сервис TransferArrival перенос из файлов xml в базу данных METRANS  -->
-    <add key="ActiveTransferArrival" value="false"/>
-    <add key="IntervalTransferArrival" value="300"/>
-    <add key="ArrivalToRailWay" value="false"/>
-    <add key="DeleteFileTransferArrival" value="True"/>
-    <add key="DayRangeArrivalCars" value="5"/>
+    <add key="ActiveTransferArrival" value="false" />
+    <add key="IntervalTransferArrival" value="300" />
+    <add key="ArrivalToRailWay" value="false" />
+    <add key="DeleteFileTransferArrival" value="True" />
+    <add key="DayRangeArrivalCars" value="5" />
     <!--Подключение к Модулю согласования-->
-    <add key="SMS_HOST" value="10.21.2.139"/>
-    <add key="SMS_PORT" value="8787"/>
+    <add key="SMS_HOST" value="10.21.2.139" />
+    <add key="SMS_PORT" value="8787" />
     <!-- Получение информации о вагоне -->
-    <add key="WebApiUZWagonURL" value="https://uz.gov.ua/car_info/index.php"/>
+    <add key="WebApiUZWagonURL" value="https://uz.gov.ua/car_info/index.php" />
   </appSettings>
   <connectionStrings>
-    <add name="KIS" providerName="Oracle.ManagedDataAccess.Client" connectionString="User Id=wagons;Password=trans_01;Data Source=Wagons"/>
-    <add name="log" connectionString="data source=krr-sql-paclx03;initial catalog=KRR-PA-CNT-Railway;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient"/>
-    <add name="UZ" connectionString="data source=krr-sql-paclx03;initial catalog=KRR-PA-CNT-Railway;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient"/>
-    <add name="metrans" connectionString="data source=krr-sql-paclx03;initial catalog=KRR-PA-CNT-Railway;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient"/>
-    <add name="IDS" connectionString="data source=krr-sql-paclx03;initial catalog=KRR-PA-CNT-Railway;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient"/>
-    <add name="SMS" connectionString="data source=krr-sql-paclx02;initial catalog=KRR-PA-VIZ-Other_DATA;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient"/>
+    <add name="KIS" providerName="Oracle.ManagedDataAccess.Client" connectionString="User Id=wagons;Password=trans_01;Data Source=Wagons" />
+    <add name="log" connectionString="data source=krr-sql-paclx03;initial catalog=KRR-PA-CNT-Railway;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="UZ" connectionString="data source=krr-sql-paclx03;initial catalog=KRR-PA-CNT-Railway;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="metrans" connectionString="data source=krr-sql-paclx03;initial catalog=KRR-PA-CNT-Railway;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="IDS" connectionString="data source=krr-sql-paclx03;initial catalog=KRR-PA-CNT-Railway;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="SMS" connectionString="data source=krr-sql-paclx02;initial catalog=KRR-PA-VIZ-Other_DATA;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
     <!--<add name="log" connectionString="data source=HP_EDIK;initial catalog=KRR-PA-CNT-Railway;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />-->
-    <add name="OracleDbContext" providerName="Oracle.ManagedDataAccess.Client" connectionString="User Id=oracle_user;Password=oracle_user_password;Data Source=oracle"/>
   </connectionStrings>
   <entityFramework>
     <providers>
-      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer"/>
-      <provider invariantName="Oracle.ManagedDataAccess.Client" type="Oracle.ManagedDataAccess.EntityFramework.EFOracleProviderServices, Oracle.ManagedDataAccess.EntityFramework, Version=6.122.19.1, Culture=neutral, PublicKeyToken=89b483f429c47342"/>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
-        <parameter value="mssqllocaldb"/>
+        <parameter value="mssqllocaldb" />
       </parameters>
     </defaultConnectionFactory>
   </entityFramework>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
-        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral"/>
-        <bindingRedirect oldVersion="0.0.0.0-13.0.0.0" newVersion="13.0.0.0"/>
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-13.0.0.0" newVersion="13.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" culture="neutral"/>
-        <bindingRedirect oldVersion="0.0.0.0-5.2.7.0" newVersion="5.2.7.0"/>
-      </dependentAssembly>
-      <dependentAssembly>
-        <publisherPolicy apply="no"/>
-        <assemblyIdentity name="Oracle.ManagedDataAccess" publicKeyToken="89b483f429c47342" culture="neutral"/>
-        <bindingRedirect oldVersion="4.121.0.0 - 4.65535.65535.65535" newVersion="4.122.19.1"/>
+        <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.7.0" newVersion="5.2.7.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
@@ -161,15 +152,8 @@
     <version number="*">
       <dataSources>
         <!--<dataSource alias="SampleDataSource" descriptor="(DESCRIPTION=(ADDRESS=(PROTOCOL=tcp)(HOST=localhost)(PORT=1521))(CONNECT_DATA=(SERVICE_NAME=ORCL))) " />-->
-        <dataSource alias="Wagons" descriptor="(DESCRIPTION=(ADDRESS=(PROTOCOL=tcp)(HOST=krr-sql24)(PORT=1521))(CONNECT_DATA=(SID=RESERV))) "/>
-        <dataSource alias="SampleDataSource" descriptor="(DESCRIPTION=(ADDRESS=(PROTOCOL=tcp)(HOST=localhost)(PORT=1521))(CONNECT_DATA=(SERVICE_NAME=ORCL))) "/>
+        <dataSource alias="Wagons" descriptor="(DESCRIPTION=(ADDRESS=(PROTOCOL=tcp)(HOST=krr-sql24)(PORT=1521))(CONNECT_DATA=(SID=RESERV))) " />
       </dataSources>
     </version>
   </oracle.manageddataaccess.client>
-  <system.data>
-    <DbProviderFactories>
-      <remove invariant="Oracle.ManagedDataAccess.Client"/>
-      <add name="ODP.NET, Managed Driver" invariant="Oracle.ManagedDataAccess.Client" description="Oracle Data Provider for .NET, Managed Driver" type="Oracle.ManagedDataAccess.Client.OracleClientFactory, Oracle.ManagedDataAccess, Version=4.122.19.1, Culture=neutral, PublicKeyToken=89b483f429c47342"/>
-    </DbProviderFactories>
-  </system.data>
 </configuration>
